1) Added database integration Entities(Attendance.java, Lessons.java, Schedule.java, Students.java) Repositories(AttendanceRepository.java, LessonsRepository.java, ScheduleRepository.java, StudentsRepository.java) Embeddables(AttendanceIdentity.java) 2) Updated application.properties for database connection 3) Updated dependencies in build.gradle 4) Small changes in schedule.html and NavController.java 5) Added

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -35,6 +35,7 @@
         Неделя:
         <span class="ratio-week">Нечётная <input type="radio" name="week" id="odd" checked value="odd"></span>
         <span class="ratio-week">Чётная <input type="radio" name="week" id="even" value="even"><br></span>
+        <span class="ratio-week">Всегда <input type="radio" name="week" id="both" value="both"><br></span>
         Время проведения занятия: <input type="time" name="time" id="time" value="12:00"><br>
         Действие:
         <span class="ratio-week">Добавить <input type="radio" name="action" id="add" checked value="add"></span>
