1) Added controllers to all pages (Attendance, Edit, Lessons, Schedule, Students) 2) All @GetMapping elements have been moved to their respective controllers 3) NavController renamed to IndexController 4) Added functional to all <select> elements 5) Added opportunity to add and update Students and Lessons 6) Fixed typo at some places 7) Small style changes (style.css)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,13 +22,13 @@ form{
     background-color: white;
     padding: 0.5%;
     width: fit-content;
+    border: 1px solid black;
 }
     form>h3{
         margin: 0;
     }
     form>input{
-        margin: 3px auto;
-
+        margin: 1% auto;
     }
     form>select{
         margin: 2px auto;
@@ -38,6 +38,10 @@ form{
         padding: 2px 3px;
         margin: 0 1px;
     }
+        select{
+            text-align: center;
+        }
+
 .wrapper{
     overflow-y: auto;
     width: 100%;
