--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -23,7 +23,7 @@
         Предмет:
         <select name="lesson" id="lesson">
             <option value="-1" selected disabled>---Выберите предмет---</option>
-            <option value="1">Тест</option>
+            <div th:replace="blocks/select-templates :: lessons-select"/>
         </select><br>
         Тип: 
         <select name="type" id="type">
@@ -51,18 +51,22 @@
         var _delete = document.getElementById("delete")
         var action = document.getElementsByName("action")
         function change(){
-            console.log(dayOfTheWeek.value, lesson.value, type.value)
+            console.log(action[0].checked || dayOfTheWeek.value, lesson.value, type.value)
             if(dayOfTheWeek.value==-1 || lesson.value==-1 || type.value==-1){
                 execute.disabled = true
+                _delete.disabled = true
             }else{
                 execute.disabled = false
+                _delete.disabled = false
             }
         }
         function actionchanged(){
-            if(action[0].checked){
+            if(action[0].checked || dayOfTheWeek.value==-1 || lesson.value==-1 || type.value==-1){
                 _delete.disabled = true
+                execute.value = "Добавить"
             }else{
                 _delete.disabled = false
+                execute.value = "Обновить"
             }
         }
         dayOfTheWeek.addEventListener("change", change)
