--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h2>Студенты</h2>
-    <form>
+    <form action="/students/edit" method="post">
         <h3>Редактор</h3>
         Студент: 
         <select name="student" id="selected_student">
             <option value="-1" selected>---Добавить---</option>
-            <option value="1">Тест</option>
+            <div th:replace="blocks/select-templates :: students-select"/>
         </select><br>
-        ФИО: <input type="text" name="fullname"><br>
+        ФИО: <input type="text" name="fullname" maxlength="100"><br>
         <input type="submit" value="Добавить" id="send"> <input type="submit" value="Удалить" id="remove" disabled="true">
     </form><br>
     <a href="/">Вернуться</a>
