1) Removed unused code 2) javascript code moved to .js files (previously it was at <script> section inside .html files) 3) Added opportunity to delete lessons and students 4) Added alert after adding/updating/removing data 5) Minor html changes

--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -68,5 +68,6 @@
         </table>
     </div>
     <br><a href="/">Вернуться</a>
+    <script th:src="@{/js/attendance.js}"></script>
 </body>
 </html>
