--- a/src/main/resources/templates/lesson.html
+++ b/src/main/resources/templates/lesson.html
@@ -19,19 +19,7 @@
         <input type="submit" value="Добавить" id="send"> <input type="submit" value="Удалить" id="remove" disabled="true">
     </form><br>
     <a href="/">Вернуться</a>
-    <script>
-        var submit = document.getElementById("send")
-        var select = document.getElementById("selected_lesson")
-        var remove = document.getElementById("remove")
-        select.addEventListener("change", ()=>{
-            if(select.value == -1){
-                submit.value = "Добавить"
-                remove.disabled = true
-            }else{
-                submit.value = "Обновить"
-                remove.disabled = false
-            }
-        })
-    </script>
+    <script th:src="@{/js/alert.js}"></script>
+    <script th:src="@{/js/lesson.js}"></script>
 </body>
 </html>
