--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Студенты</h2>
-    <form action="/students/edit" method="post">
+    <form method="post">
         <h3>Редактор</h3>
         Студент: 
         <select name="student" id="selected_student">
@@ -16,22 +16,10 @@
             <div th:replace="blocks/select-templates :: students-select"/>
         </select><br>
         ФИО: <input type="text" name="fullname" maxlength="100"><br>
-        <input type="submit" value="Добавить" id="send"> <input type="submit" value="Удалить" id="remove" disabled="true">
+        <input type="submit" value="Добавить" id="send" formaction="/student/edit"> <input type="submit" value="Удалить" id="remove" disabled="true" formaction="/student/remove">
     </form><br>
     <a href="/">Вернуться</a>
-    <script>
-        var submit = document.getElementById("send")
-        var select = document.getElementById("selected_student")
-        var remove = document.getElementById("remove")
-        select.addEventListener("change", ()=>{
-            if(select.value == -1){
-                submit.value = "Добавить"
-                remove.disabled = true
-            }else{
-                submit.value = "Обновить"
-                remove.disabled = false
-            }
-        })
-    </script>
+    <script th:src="@{/js/alert.js}"></script>
+    <script th:src="@{/js/student.js}"></script>
 </body>
 </html>
