1) Added opportunity to add/update/remove lessons and schedule 2) Added alert on change via alert.js 3) Remade form in schedule.html 4) Added template for schedule <select> auto generation 5) Added preparations for future bot

--- a/src/main/resources/templates/blocks/select-templates.html
+++ b/src/main/resources/templates/blocks/select-templates.html
@@ -5,4 +5,7 @@
     <div th:fragment="lessons-select" th:each="lesson : ${lessons}">
         <option th:value="${lesson.id}" th:text="${lesson.title}"/>
     </div>
+    <div th:fragment="schedule-select" th:each="schedule : ${schedules}">
+        <option th:value="${schedule.id}" th:text="${schedule.lesson.title}"/>
+    </div>
 </html>
