--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <h2>Релактор расписания</h2>
+    <h2>Редактор расписания</h2>
     <form method="post">
         Рассписание:
         <select name="scheduleList" id="scheduleList">
